--- a/config/dbconfig.json
+++ b/config/dbconfig.json
@@ -2,5 +2,5 @@
   "host": "127.0.0.1",
   "user": "root",
   "password": "Pp32393275!",
-  "database": "fisrtdatabase"
+  "database": "firstdatabase"
 }
